[gd_scene load_steps=5 format=3 uid="uid://b25l1e51q6ikg"]

[ext_resource type="Script" path="res://EnemyFly.gd" id="1_uey0b"]
[ext_resource type="PackedScene" uid="uid://dhhhc0afvu644" path="res://hp.tscn" id="2_8ecdr"]

[sub_resource type="SphereShape3D" id="SphereShape3D_difr4"]
radius = 0.75

[sub_resource type="SphereMesh" id="SphereMesh_g8kwg"]
radius = 0.75
height = 1.5

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_uey0b")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_difr4")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_g8kwg")

[node name="HP" parent="." instance=ExtResource("2_8ecdr")]
maxHP = 1

[node name="AtkCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="onDeath" from="HP" to="." method="_on_hp_on_death"]
[connection signal="timeout" from="AtkCooldown" to="." method="_on_atk_cooldown_timeout"]
